--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, 
          update-manager-core (= ${source:Version}),
          python-aptdaemon.gtk3widgets (>= 0.40) | synaptic, 
+         gksu,
          python-dbus,
          python-gobject (>= 2.28.6-2),
          gir1.2-vte-2.90, 
