--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends-Indep: libxml-parser-perl,
                      intltool
 Standards-Version: 3.8.0
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/update-manager/main
+X-Python-Version: >= 2.6
 
 Package: update-manager-core
 Architecture: any
