--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,7 @@ Section: admin
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
          python-apt (>= 0.7.13.4ubuntu3),  
-         lsb-release,  
-         python-gnupginterface
+         lsb-release
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.146.2)
 Breaks: update-manager (<< 1:0.146.2), 
