--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,9 @@ override_dh_auto_clean:
 		./DistUpgrade/$(DIST)  ./DistUpgrade/$(DIST).tar.gz \
 		 ./DistUpgrade/ubuntu-drivers-obsolete.pkgs ./po/mo
 
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
+
 binary: binary-arch binary-indep
 binary-indep:
 	dh $@ $(DH_ARGS)
